Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/manual/backup-and-restore/negative-power-down-node-while-restoring-replace/index.html
+++ b/manual/backup-and-restore/negative-power-down-node-while-restoring-replace/index.html
@@ -1963,13 +1963,49 @@
   <h1 id="title">Negative Power down the node where the VM is getting replaced by the restore</h1>
   <div>
     <article id="content">
-       <ol>
-<li>Initiate a restore with existing VM.</li>
-<li>While the restore is in progress and VM is starting on a node, shut down the node</li>
+       <ul>
+<li>Related issues
+<ul>
+<li><a href="https://github.com/harvester/tests/issues/1263">tests#1263</a> [ReleaseTesting] Negative Power down the node where the VM is getting replaced by the restore</li>
+</ul>
+</li>
+</ul>
+<h2 id="verification-steps">Verification Steps</h2>
+<ol>
+<li>
+<p>Setup a 3 nodes harvester</p>
+</li>
+<li>
+<p>Create a VM w/ extra disk and some data</p>
+</li>
+<li>
+<p>Backup and shutdown VM</p>
+</li>
+<li>
+<p>Start to observe <code>pod/virt-launcher-VMNAME</code> to get the node VM restoring on for next step.</p>
+</li>
+<li>
+<p>Initiate a restore with existing VM, get node info from <code>pod/virt-launcher-VMNAME</code>.
+<img src="https://github.com/harvester/tests/assets/2773781/eb3750eb-26a1-4785-b2d5-a41a4c749dcb" alt="image"></p>
+</li>
+<li>
+<p>While the restore is in progress and VM is starting on a node, shut down the node</p>
+</li>
 </ol>
 <h2 id="expected-results">Expected Results</h2>
 <ol>
-<li>You should get an error</li>
+<li>
+<p>1st restore should fail
+<img src="https://github.com/harvester/tests/assets/2773781/49fcf50e-6c84-4198-bc91-b42cbc123c51" alt="image"></p>
+</li>
+<li>
+<p>VM should be restore to another node and <code>Running</code>
+<img src="https://github.com/harvester/tests/assets/2773781/a316c185-3a43-44be-a9d3-a65480837b18" alt="image"></p>
+</li>
+<li>
+<p>Test data still available and not broken
+<img src="https://github.com/harvester/tests/assets/2773781/62cd07d1-9ba5-4ff9-9120-41695beb966d" alt="image"></p>
+</li>
 </ol>
 
     </article>
