--- a/backend/integrations/index.html
+++ b/backend/integrations/index.html
@@ -61,6 +61,10 @@ hljs.highlightAll();
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integrations.test_4_vm_template" href="test_4_vm_template.html">harvester_e2e_tests.integrations.test_4_vm_template</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integrations.test_5_vm_networks" href="test_5_vm_networks.html">harvester_e2e_tests.integrations.test_5_vm_networks</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -118,6 +122,7 @@ hljs.highlightAll();
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_backup_restore" href="test_4_vm_backup_restore.html">harvester_e2e_tests.integrations.test_4_vm_backup_restore</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_host_powercycle" href="test_4_vm_host_powercycle.html">harvester_e2e_tests.integrations.test_4_vm_host_powercycle</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_4_vm_snapshot" href="test_4_vm_snapshot.html">harvester_e2e_tests.integrations.test_4_vm_snapshot</a></code></li>
+<li><code><a title="harvester_e2e_tests.integrations.test_4_vm_template" href="test_4_vm_template.html">harvester_e2e_tests.integrations.test_4_vm_template</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_5_vm_networks" href="test_5_vm_networks.html">harvester_e2e_tests.integrations.test_5_vm_networks</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_5_vm_networks_interact" href="test_5_vm_networks_interact.html">harvester_e2e_tests.integrations.test_5_vm_networks_interact</a></code></li>
 <li><code><a title="harvester_e2e_tests.integrations.test_9_rancher_integration" href="test_9_rancher_integration.html">harvester_e2e_tests.integrations.test_9_rancher_integration</a></code></li>
