Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -33,6 +33,10 @@ hljs.highlightAll();
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.base" href="base.html">harvester_e2e_tests.fixtures.base</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.images" href="images.html">harvester_e2e_tests.fixtures.images</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -45,11 +49,19 @@ hljs.highlightAll();
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.settings" href="settings.html">harvester_e2e_tests.fixtures.settings</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.terraform" href="terraform.html">harvester_e2e_tests.fixtures.terraform</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.virtualmachines" href="virtualmachines.html">harvester_e2e_tests.fixtures.virtualmachines</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.volumes" href="volumes.html">harvester_e2e_tests.fixtures.volumes</a></code></dt>
 <dd>
 <div class="desc"></div>
 </dd>
@@ -75,11 +87,14 @@ hljs.highlightAll();
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
 <li><code><a title="harvester_e2e_tests.fixtures.api_client" href="api_client.html">harvester_e2e_tests.fixtures.api_client</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.base" href="base.html">harvester_e2e_tests.fixtures.base</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.images" href="images.html">harvester_e2e_tests.fixtures.images</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.networks" href="networks.html">harvester_e2e_tests.fixtures.networks</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.rancher_api_client" href="rancher_api_client.html">harvester_e2e_tests.fixtures.rancher_api_client</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.settings" href="settings.html">harvester_e2e_tests.fixtures.settings</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.terraform" href="terraform.html">harvester_e2e_tests.fixtures.terraform</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.virtualmachines" href="virtualmachines.html">harvester_e2e_tests.fixtures.virtualmachines</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.volumes" href="volumes.html">harvester_e2e_tests.fixtures.volumes</a></code></li>
 </ul>
 </li>
 </ul>
