Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integrations/test_4_vm_backup_restore.html
+++ b/backend/integrations/test_4_vm_backup_restore.html
@@ -185,6 +185,8 @@ class TestBackupRestore:
         spec = api_client.backups.RestoreSpec.for_new(restored_vm_name)
         code, data = api_client.backups.restore(unique_vm_name, spec)
         assert 201 == code, (code, data)
+        vm_getable, (code, data) = vm_checker.wait_getable(restored_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started then get IPs (vm and host)
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(restored_vm_name, [&#39;default&#39;])
@@ -267,6 +269,8 @@ class TestBackupRestore:
         spec = api_client.backups.RestoreSpec.for_existing(delete_volumes=True)
         code, data = api_client.backups.restore(unique_vm_name, spec)
         assert 201 == code, f&#39;Failed to restore backup with current VM replaced, {data}&#39;
+        vm_getable, (code, data) = vm_checker.wait_getable(unique_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started then get IPs (vm and host)
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#39;default&#39;])
@@ -385,6 +389,8 @@ class TestBackupRestore:
         spec = api_client.backups.RestoreSpec.for_existing(delete_volumes=True)
         code, data = api_client.backups.restore(unique_vm_name, spec)
         assert 201 == code, f&#39;Failed to restore backup with current VM replaced, {data}&#39;
+        vm_getable, (code, data) = vm_checker.wait_getable(unique_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started then get IPs (vm and host)
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#39;default&#39;])
@@ -552,6 +558,8 @@ class TestBackupRestoreOnMigration:
         spec = api_client.backups.RestoreSpec.for_existing()
         code, data = api_client.backups.restore(unique_vm_name, spec)
         assert 201 == code, f&#39;Failed to restore backup with current VM replaced, {data}&#39;
+        vm_getable, (code, data) = vm_checker.wait_getable(unique_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#39;default&#39;])
@@ -755,6 +763,8 @@ class TestMultipleBackupRestore:
         spec = api_client.backups.RestoreSpec.for_existing(delete_volumes=True)
         code, data = api_client.backups.restore(latest_backup, spec)
         assert 201 == code, f&#39;Failed to restore backup with current VM replaced, {data}&#39;
+        vm_getable, (code, data) = vm_checker.wait_getable(unique_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started then get IPs (vm and host)
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#39;default&#39;])
@@ -849,6 +859,8 @@ class TestMultipleBackupRestore:
         spec = api_client.backups.RestoreSpec.for_existing(delete_volumes=True)
         code, data = api_client.backups.restore(latest_backup, spec)
         assert 201 == code, f&#39;Failed to restore backup with current VM replaced, {data}&#39;
+        vm_getable, (code, data) = vm_checker.wait_getable(unique_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started then get IPs (vm and host)
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#39;default&#39;])
@@ -943,6 +955,8 @@ class TestMultipleBackupRestore:
         spec = api_client.backups.RestoreSpec.for_existing(delete_volumes=True)
         code, data = api_client.backups.restore(latest_backup, spec)
         assert 201 == code, f&#39;Failed to restore backup with current VM replaced, {data}&#39;
+        vm_getable, (code, data) = vm_checker.wait_getable(unique_vm_name)
+        assert vm_getable, (code, data)
 
         # Check VM Started then get IPs (vm and host)
         vm_got_ips, (code, data) = vm_checker.wait_ip_addresses(unique_vm_name, [&#39;default&#39;])
