--- a/manual/hosts/disk-devices-used-for-vm-storage-globally-configurable/index.html
+++ b/manual/hosts/disk-devices-used-for-vm-storage-globally-configurable/index.html
@@ -1950,111 +1950,111 @@
 <p><strong>Scenario 1</strong>:
 Node type: <code>Create</code></p>
 <table>
-<thead>
-<tr>
-<th>Firmware</th>
-<th>Harvester install</th>
-<th>Auto provision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>BIOS</td>
-<td>No MBR</td>
-<td>set</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Firmware</th>
+          <th style="text-align: left">Harvester install</th>
+          <th style="text-align: left">Auto provision</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">BIOS</td>
+          <td style="text-align: left">No MBR</td>
+          <td style="text-align: left">set</td>
+      </tr>
+  </tbody>
 </table>
 <p>Node type: <code>Join</code></p>
 <table>
-<thead>
-<tr>
-<th>Firmware</th>
-<th>Harvester Install</th>
-<th>Auto provision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>BIOS</td>
-<td>No MBR</td>
-<td>No set</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Firmware</th>
+          <th style="text-align: left">Harvester Install</th>
+          <th style="text-align: left">Auto provision</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">BIOS</td>
+          <td style="text-align: left">No MBR</td>
+          <td style="text-align: left">No set</td>
+      </tr>
+  </tbody>
 </table>
 </li>
 <li>
 <p><strong>Scenario 2</strong>:
 Node type: <code>Create</code></p>
 <table>
-<thead>
-<tr>
-<th>Firmware</th>
-<th>Harvester install</th>
-<th>Auto provision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>BIOS</td>
-<td>MBR</td>
-<td>set</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Firmware</th>
+          <th style="text-align: left">Harvester install</th>
+          <th style="text-align: left">Auto provision</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">BIOS</td>
+          <td style="text-align: left">MBR</td>
+          <td style="text-align: left">set</td>
+      </tr>
+  </tbody>
 </table>
 <p>Node type: <code>Join</code></p>
 <table>
-<thead>
-<tr>
-<th>Firmware</th>
-<th>Harvester Install</th>
-<th>Auto provision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>BIOS</td>
-<td>MBR</td>
-<td>No set</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Firmware</th>
+          <th style="text-align: left">Harvester Install</th>
+          <th style="text-align: left">Auto provision</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">BIOS</td>
+          <td style="text-align: left">MBR</td>
+          <td style="text-align: left">No set</td>
+      </tr>
+  </tbody>
 </table>
 </li>
 <li>
 <p><strong>Scenario 3</strong>:
 Node type: <code>Create</code></p>
 <table>
-<thead>
-<tr>
-<th>Firmware</th>
-<th>Harvester install</th>
-<th>Auto provision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>UEFI</td>
-<td>GPT</td>
-<td>set</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Firmware</th>
+          <th style="text-align: left">Harvester install</th>
+          <th style="text-align: left">Auto provision</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">UEFI</td>
+          <td style="text-align: left">GPT</td>
+          <td style="text-align: left">set</td>
+      </tr>
+  </tbody>
 </table>
 <p>Node type: <code>Join</code></p>
 <table>
-<thead>
-<tr>
-<th>Firmware</th>
-<th>Harvester Install</th>
-<th>Auto provision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>UEFI</td>
-<td>GPT</td>
-<td>No set</td>
-</tr>
-</tbody>
+  <thead>
+      <tr>
+          <th style="text-align: left">Firmware</th>
+          <th style="text-align: left">Harvester Install</th>
+          <th style="text-align: left">Auto provision</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td style="text-align: left">UEFI</td>
+          <td style="text-align: left">GPT</td>
+          <td style="text-align: left">No set</td>
+      </tr>
+  </tbody>
 </table>
 </li>
 </ul>
