Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/manual/hosts/disk-devices-used-for-vm-storage-globally-configurable/index.html
+++ b/manual/hosts/disk-devices-used-for-vm-storage-globally-configurable/index.html
@@ -1961,16 +1961,16 @@ Node type: <code>Create</code></p>
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Firmware</th>
-          <th style="text-align: left">Harvester install</th>
-          <th style="text-align: left">Auto provision</th>
+          <th>Firmware</th>
+          <th>Harvester install</th>
+          <th>Auto provision</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">BIOS</td>
-          <td style="text-align: left">No MBR</td>
-          <td style="text-align: left">set</td>
+          <td>BIOS</td>
+          <td>No MBR</td>
+          <td>set</td>
       </tr>
   </tbody>
 </table>
@@ -1978,16 +1978,16 @@ Node type: <code>Create</code></p>
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Firmware</th>
-          <th style="text-align: left">Harvester Install</th>
-          <th style="text-align: left">Auto provision</th>
+          <th>Firmware</th>
+          <th>Harvester Install</th>
+          <th>Auto provision</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">BIOS</td>
-          <td style="text-align: left">No MBR</td>
-          <td style="text-align: left">No set</td>
+          <td>BIOS</td>
+          <td>No MBR</td>
+          <td>No set</td>
       </tr>
   </tbody>
 </table>
@@ -1998,16 +1998,16 @@ Node type: <code>Create</code></p>
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Firmware</th>
-          <th style="text-align: left">Harvester install</th>
-          <th style="text-align: left">Auto provision</th>
+          <th>Firmware</th>
+          <th>Harvester install</th>
+          <th>Auto provision</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">BIOS</td>
-          <td style="text-align: left">MBR</td>
-          <td style="text-align: left">set</td>
+          <td>BIOS</td>
+          <td>MBR</td>
+          <td>set</td>
       </tr>
   </tbody>
 </table>
@@ -2015,16 +2015,16 @@ Node type: <code>Create</code></p>
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Firmware</th>
-          <th style="text-align: left">Harvester Install</th>
-          <th style="text-align: left">Auto provision</th>
+          <th>Firmware</th>
+          <th>Harvester Install</th>
+          <th>Auto provision</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">BIOS</td>
-          <td style="text-align: left">MBR</td>
-          <td style="text-align: left">No set</td>
+          <td>BIOS</td>
+          <td>MBR</td>
+          <td>No set</td>
       </tr>
   </tbody>
 </table>
@@ -2035,16 +2035,16 @@ Node type: <code>Create</code></p>
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Firmware</th>
-          <th style="text-align: left">Harvester install</th>
-          <th style="text-align: left">Auto provision</th>
+          <th>Firmware</th>
+          <th>Harvester install</th>
+          <th>Auto provision</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">UEFI</td>
-          <td style="text-align: left">GPT</td>
-          <td style="text-align: left">set</td>
+          <td>UEFI</td>
+          <td>GPT</td>
+          <td>set</td>
       </tr>
   </tbody>
 </table>
@@ -2052,16 +2052,16 @@ Node type: <code>Create</code></p>
 <table>
   <thead>
       <tr>
-          <th style="text-align: left">Firmware</th>
-          <th style="text-align: left">Harvester Install</th>
-          <th style="text-align: left">Auto provision</th>
+          <th>Firmware</th>
+          <th>Harvester Install</th>
+          <th>Auto provision</th>
       </tr>
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">UEFI</td>
-          <td style="text-align: left">GPT</td>
-          <td style="text-align: left">No set</td>
+          <td>UEFI</td>
+          <td>GPT</td>
+          <td>No set</td>
       </tr>
   </tbody>
 </table>
