Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -68,6 +68,10 @@ el.replaceWith(d);
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.upgrades" href="upgrades.html">harvester_e2e_tests.fixtures.upgrades</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.virtualmachines" href="virtualmachines.html">harvester_e2e_tests.fixtures.virtualmachines</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -104,6 +108,7 @@ el.replaceWith(d);
 <li><code><a title="harvester_e2e_tests.fixtures.rancher_api_client" href="rancher_api_client.html">harvester_e2e_tests.fixtures.rancher_api_client</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.settings" href="settings.html">harvester_e2e_tests.fixtures.settings</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.terraform" href="terraform.html">harvester_e2e_tests.fixtures.terraform</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.upgrades" href="upgrades.html">harvester_e2e_tests.fixtures.upgrades</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.virtualmachines" href="virtualmachines.html">harvester_e2e_tests.fixtures.virtualmachines</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.volumes" href="volumes.html">harvester_e2e_tests.fixtures.volumes</a></code></li>
 </ul>
