Update testing docs
Signed-off-by: albinsun <albinsun@users.noreply.github.com>

--- a/backend/integrations/test_4_vm_backup_restore.html
+++ b/backend/integrations/test_4_vm_backup_restore.html
@@ -434,6 +434,7 @@ class TestBackupRestore:
 
     @pytest.mark.dependency()
     def test_connection(self, api_client, backup_config, config_backup_target):
+        sleep(1)  # to prevent check too fast and get 409 &#39;backup-target setting is not set&#39;
         code, data = api_client.settings.backup_target_test_connection()
         assert 200 == code, f&#39;Failed to test backup target connection: {data}&#39;
 
@@ -766,6 +767,7 @@ class TestBackupRestore:
 </summary>
 <pre><code class="python">@pytest.mark.dependency()
 def test_connection(self, api_client, backup_config, config_backup_target):
+    sleep(1)  # to prevent check too fast and get 409 &#39;backup-target setting is not set&#39;
     code, data = api_client.settings.backup_target_test_connection()
     assert 200 == code, f&#39;Failed to test backup target connection: {data}&#39;</code></pre>
 </details>
